[package]
name = "store"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["compression"] }
tracing = "*"
tracing-subscriber = "*"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = {version = "1.0", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"]}
slug = "0.1.2"
async-graphql = { version = "2.9.8" }
async-graphql-warp = { version = "2.9.8" }
http = "*"
dotenv = "*"
lazy_static = "*"
